--- a/Resources/config/routing/ffprincipale.yml
+++ b/Resources/config/routing/ffprincipale.yml
@@ -1,41 +1,41 @@
 ffprincipale:
-    pattern:  /
+    path:  /
     defaults: { _controller: "FiCoreBundle:ffprincipale:index" }
 
 ffprincipale_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "FiCoreBundle:ffprincipale:new" }
 
 ffprincipale_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "FiCoreBundle:ffprincipale:create" }
-    requirements: { _method: post }
+    requirements: { methods: post }
 
 ffprincipale_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "FiCoreBundle:ffprincipale:edit" }
 
 ffprincipale_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "FiCoreBundle:ffprincipale:update" }
-    requirements: { _method: post|put }
+    requirements: { methods: post|put }
 
 ffprincipale_aggiorna:
-    pattern:  /aggiorna
+    path:  /aggiorna
     defaults: { _controller: "FiCoreBundle:ffprincipale:aggiorna" }
-    requirements: { _method: post|put }
+    requirements: { methods: post|put }
 
 ffprincipale_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "FiCoreBundle:ffprincipale:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
 
 ffprincipale_deletemultiple:
-    pattern:  /delete
+    path:  /delete
     defaults: { _controller: "FiCoreBundle:ffprincipale:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
 
 ffprincipale_griglia:
-    pattern:  /griglia
+    path:  /griglia
     defaults: { _controller: "FiCoreBundle:ffprincipale:griglia" }
-    requirements: { _method: get }
+    requirements: { methods: get }
