--- a/Resources/config/routing/opzionitabella.yml
+++ b/Resources/config/routing/opzionitabella.yml
@@ -1,41 +1,41 @@
 opzioniTabella:
-    pattern:  /
+    path:  /
     defaults: { _controller: "FiCoreBundle:opzioniTabella:index" }
 
 opzioniTabella_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "FiCoreBundle:opzioniTabella:new" }
 
 opzioniTabella_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "FiCoreBundle:opzioniTabella:create" }
-    requirements: { _method: post }
+    requirements: { methods: post }
 
 opzioniTabella_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "FiCoreBundle:opzioniTabella:edit" }
 
 opzioniTabella_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "FiCoreBundle:opzioniTabella:update" }
-    requirements: { _method: post|put }
+    requirements: { methods: post|put }
 
 opzioniTabella_aggiorna:
-    pattern:  /aggiorna
+    path:  /aggiorna
     defaults: { _controller: "FiCoreBundle:opzioniTabella:aggiorna" }
-    requirements: { _method: post|put }
+    requirements: { methods: post|put }
 
 opzioniTabella_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "FiCoreBundle:opzioniTabella:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
 
 opzioniTabella_deletemultiple:
-    pattern:  /delete
+    path:  /delete
     defaults: { _controller: "FiCoreBundle:opzioniTabella:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
 
 opzioniTabella_griglia:
-    pattern:  /griglia
+    path:  /griglia
     defaults: { _controller: "FiCoreBundle:opzioniTabella:griglia" }
-    requirements: { _method: get }
+    requirements: { methods: get }
