--- a/Resources/config/routing/ruoli.yml
+++ b/Resources/config/routing/ruoli.yml
@@ -1,40 +1,40 @@
 ruoli:
-    pattern:  /
+    path:  /
     defaults: { _controller: "FiCoreBundle:ruoli:index" }
 
 ruoli_show:
-    pattern:  /{id}/show
+    path:  /{id}/show
     defaults: { _controller: "FiCoreBundle:ruoli:show" }
 
 ruoli_new:
-    pattern:  /new
+    path:  /new
     defaults: { _controller: "FiCoreBundle:ruoli:new" }
 
 ruoli_create:
-    pattern:  /create
+    path:  /create
     defaults: { _controller: "FiCoreBundle:ruoli:create" }
-    requirements: { _method: post }
+    requirements: { methods: post }
 
 ruoli_edit:
-    pattern:  /{id}/edit
+    path:  /{id}/edit
     defaults: { _controller: "FiCoreBundle:ruoli:edit" }
 
 ruoli_update:
-    pattern:  /{id}/update
+    path:  /{id}/update
     defaults: { _controller: "FiCoreBundle:ruoli:update" }
-    requirements: { _method: post|put }
+    requirements: { methods: post|put }
 
 ruoli_delete:
-    pattern:  /{id}/delete
+    path:  /{id}/delete
     defaults: { _controller: "FiCoreBundle:ruoli:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
     
 ruoli_deletemultiple:
-    pattern:  /delete
+    path:  /delete
     defaults: { _controller: "FiCoreBundle:ruoli:delete" }
-    requirements: { _method: post|delete }
+    requirements: { methods: post|delete }
 
 ruoli_griglia:
-    pattern:  /griglia
+    path:  /griglia
     defaults: { _controller: "FiCoreBundle:ruoli:griglia" }
-    requirements: { _method: get }
+    requirements: { methods: get }
