--- a/Resources/config/routing/tabelle.yml
+++ b/Resources/config/routing/tabelle.yml
@@ -59,3 +59,8 @@ tabelle_griglia:
     defaults: { _controller: "FiCoreBundle:tabelle:griglia" }
     requirements: { methods: get }
     
+tabelle_listacampitabella:
+    path:  /listacampitabella
+    defaults: { _controller: "FiCoreBundle:tabelle:listacampitabella" }
+    requirements: { methods: get }
+    
