--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         }
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "vich/uploader-bundle": "^0.14.0", 
+        "oneup/flysystem-bundle": "@stable"
     },
     "extra": {
         "branch-alias": {
