--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "vich/uploader-bundle": "^0.14.0", 
+        "vich/uploader-bundle": "^0.14.0",
         "oneup/flysystem-bundle": "@stable"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
