--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     },
     "require": {
         "php": ">=5.5.0",
+        "fi/osbundle": "~1.0",
         "vich/uploader-bundle": "~1.0",
         "oneup/flysystem-bundle": "@stable"
     },
