--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,15 @@
         "vich/uploader-bundle": "~1.0",
         "oneup/flysystem-bundle": "@stable"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "~1.4",
+        "phpmd/phpmd": "~1.5",
+        "sensiolabs/security-checker": "~1.1",
+        "phpunit/phpunit": "4.8.21",
+        "satooshi/php-coveralls": "~0.6.1",
+        "sebastian/phpcpd": "~1.4",
+        "mockery/mockery": "~0.9"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "2.0.x-dev"
