--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
+  - 7.0
 
 before_script:
   - composer install
@@ -14,7 +14,7 @@ script:
 
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
-  - bin/security-checker -n security:check
+  - vendor/bin/security-checker -n security:check
 
 notifications:
   email:
