--- a/composer.json
+++ b/composer.json
@@ -31,28 +31,57 @@
             "Fi\\CoreBundle\\": "src"
         }
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://satis.comune.intranet"
-        }
-    ],
     "require": {
         "php": ">=5.5.0",
+        "symfony/symfony": "2.8.*",
         "fi/osbundle": "~2.0",
+        "fi/pannelloamministrazionebundle": "~2.0",
         "vich/uploader-bundle": "~1.0",
         "oneup/flysystem-bundle": "@stable"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~1.4",
-        "phpmd/phpmd": "~1.5",
-        "sensiolabs/security-checker": "~1.1",
-        "phpunit/phpunit": "4.8.21",
-        "satooshi/php-coveralls": "~0.6.1",
-        "sebastian/phpcpd": "~1.4",
-        "mockery/mockery": "~0.9"
+        "phpunit/phpunit": "^5.5",
+        "sensiolabs/security-checker": "^3.0",
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^2.7",
+        "phpmd/phpmd": "^2.4",
+        "sebastian/phpcpd": "^2.0",
+        "mockery/mockery": "^0.9.5",
+        "symfony/symfony": "2.8.*",
+        "doctrine/orm": "^2.4.8",
+        "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/inflector": "1.0.*",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "symfony/yaml": "2.8.*",
+        "sensio/distribution-bundle": "~5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sensio/generator-bundle": "~2.0",
+        "friendsofsymfony/user-bundle": "2.0.*@dev"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ],
+        "post-update-cmd": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+        ]
     },
     "extra": {
+        "symfony-app-dir": "app",
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml",
+            "keep-outdated": true
+        },
         "branch-alias": {
             "dev-master": "2.0.x-dev"
         }
