--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,16 +11,20 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "Tests/bootstrap.php" >
+    bootstrap                   = "src/Tests/bootstrap.php" >
 
     <testsuites>
-        <testsuite name="Fifree2 test suite">
-            <directory suffix="Test.php">./Tests</directory>
+        <testsuite name="Fifiree2 test suite">
+            <directory suffix=".php">src/Tests</directory>
         </testsuite>
     </testsuites>
-    
     <php>
-        <server name="KERNEL_DIR" value="../../../app/" />
+        <server name="KERNEL_DIR" value="app" />
     </php>
 
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>    
 </phpunit>
