--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,10 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "sensio/generator-bundle": "~2.0",
-        "friendsofsymfony/user-bundle": "2.0.*@dev"
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "tecnickcom/tcpdf": "~6.0",
+        "phpoffice/phpexcel": "~1.8",
+        "phpoffice/phpword": "~0.11"
     },
     "scripts": {
         "post-install-cmd": [
