--- a/composer.json
+++ b/composer.json
@@ -36,18 +36,21 @@
         "symfony/symfony": "2.8.*",
         "fi/osbundle": "~2.0",
         "fi/pannelloamministrazionebundle": "~2.0",
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
         "vich/uploader-bundle": "~1.0",
-        "oneup/flysystem-bundle": "@stable"
+        "oneup/flysystem-bundle": "@stable",
+        "tecnickcom/tcpdf": "~6.0",
+        "phpoffice/phpexcel": "~1.8",
+        "phpoffice/phpword": "~0.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5",
+        "phpunit/phpunit": "^4.8",
         "sensiolabs/security-checker": "^3.0",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^2.7",
         "phpmd/phpmd": "^2.4",
         "sebastian/phpcpd": "^2.0",
         "mockery/mockery": "^0.9.5",
-        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/inflector": "1.0.*",
@@ -57,11 +60,7 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "sensio/generator-bundle": "~2.0",
-        "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "tecnickcom/tcpdf": "~6.0",
-        "phpoffice/phpexcel": "~1.8",
-        "phpoffice/phpword": "~0.11"
+        "sensio/generator-bundle": "~2.0"
     },
     "scripts": {
         "post-install-cmd": [
