--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
         "vich/uploader-bundle": "~1.0",
         "oneup/flysystem-bundle": "@stable",
         "tecnickcom/tcpdf": "^6.2",
-        "phpoffice/phpexcel": "~1.8",
-        "phpoffice/phpword": "~0.11"
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpword": "^0.13.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
