--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,14 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "sensio/generator-bundle": "~2.0"
+        "sensio/generator-bundle": "~2.0",
+        "behat/behat": "3.0.*",
+        "behat/mink-selenium2-driver": "1.2.*",
+        "behat/symfony2-extension": "2.0.*",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-goutte-driver": "~1.1",
+        "se/selenium-server-standalone": "^2.53"
     },
     "scripts": {
         "post-install-cmd": [
