--- a/src/Fi/CoreBundle/Resources/config/doctrine/Allegati.orm.yml
+++ b/src/Fi/CoreBundle/Resources/config/doctrine/Allegati.orm.yml
@@ -1,7 +1,6 @@
 Fi\CoreBundle\Entity\Allegati:
     type: entity
-    #schema: fifree2
-    table: allegati
+    table: Allegati
     id:
         id:
             type: integer
