--- a/build.xml
+++ b/build.xml
@@ -130,13 +130,13 @@
 
     <target name="phpunit" description="Run unit tests with PHPUnit">
         <exec executable="vendor/bin/phpunit" failonerror="true">
-            <arg line="--configuration=${basedir}/app"/>
+            <arg line="--configuration=${basedir}"/>
         </exec>
     </target>
 
     <target name="phpunit-ci" description="Run unit tests with PHPUnit">
         <exec executable="vendor/bin/phpunit" failonerror="true">
-            <arg line="--configuration=${basedir}/app"/>
+            <arg line="--configuration=${basedir}"/>
             <arg line="--coverage-clover=${basedir}/build/artifacts/coverage/clover.xml"/>
         </exec>
     </target>
