--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ php:
   - 7.0
 
 before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - composer install
   - php app/console fifree2:install admin admin admin@admin.it --env=test
+  - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
 
 script:
   - ant
@@ -15,6 +19,7 @@ script:
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
   - vendor/bin/security-checker -n security:check
+  - rm app/dbtest.sqlite
 
 notifications:
   email:
