--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - sleep 3 # give xvfb some time to start
   - composer install
   - php app/console fifree2:install admin admin admin@admin.it --env=test
+  - php app/console server:start --env=test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
 
 script:
