--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,7 +19,7 @@
         </testsuite>
     </testsuites>
     <php>
-        <server name="KERNEL_DIR" value="app" />
+        <server name="KERNEL_DIR" value="app/" />
     </php>
 
     <filter>
