--- a/composer.json
+++ b/composer.json
@@ -38,13 +38,12 @@
         "fi/pannelloamministrazionebundle": "~2.0",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
         "vich/uploader-bundle": "~1.0",
-        "oneup/flysystem-bundle": "@stable",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8",
-        "phpoffice/phpword": "^0.13.0"
+        "phpoffice/phpword": "^0.13.0",
+        "oneup/flysystem-bundle": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
         "sensiolabs/security-checker": "^3.0",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^2.7",
@@ -69,7 +68,8 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "~1.1",
-        "se/selenium-server-standalone": "^2.53"
+        "se/selenium-server-standalone": "^2.53",
+        "phpunit/phpunit": "^5.5"
     },
     "scripts": {
         "post-install-cmd": [
