--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
   - composer install
   - php app/console fifree2:install admin admin admin@admin.it --env=test
   - php app/console server:start --env=test
+  - rm -rf src/Tests/app/cache/test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
 
 script:
