--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -18,7 +18,10 @@ swiftmailer:
 fi_core:
     testroutes: true
     testdb: true
-
+    
+twig:
+    cache:  false
+    
 doctrine:
     dbal:
         driver:   %database_driver%
