--- a/composer.json
+++ b/composer.json
@@ -34,15 +34,25 @@
     },
     "require": {
         "php": ">=5.5.0",
-        "symfony/symfony": "2.8.*",
+        "symfony/symfony": "3.1.*",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-cache-bundle": "^1.2",
+        "symfony/swiftmailer-bundle": "^2.3",
+        "symfony/monolog-bundle": "^2.8",
+        "symfony/polyfill-apcu": "^1.0",
+        "sensio/distribution-bundle": "^5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/user-bundle": "dev-master#47e4de9d8b6fed521729fb38107d9413863fe4ce as 2.0",
         "fi/osbundle": "~2.0",
         "fi/pannelloamministrazionebundle": "~2.0",
-        "friendsofsymfony/user-bundle": "dev-master#47e4de9d8b6fed521729fb38107d9413863fe4ce as 2.0",
         "vich/uploader-bundle": "~1.0",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0",
-        "oneup/flysystem-bundle": "^1.4"
+        "oneup/flysystem-bundle": "^1.4",
+        "sensio/generator-bundle": "^3.0"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^3.0",
@@ -51,21 +61,10 @@
         "phpmd/phpmd": "^2.4",
         "sebastian/phpcpd": "^2.0",
         "mockery/mockery": "^0.9.5",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
-        "doctrine/inflector": "1.0.*",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "symfony/yaml": "2.8.*",
-        "sensio/distribution-bundle": "~5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "sensio/generator-bundle": "~2.0",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
         "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "behat/behat": "3.0.*",
+        "behat/behat": "~3.0",
         "behat/mink-selenium2-driver": "1.2.*",
-        "behat/symfony2-extension": "2.0.*",
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-goutte-driver": "~1.1",
