--- a/src/Fi/CoreBundle/Resources/config/routing.yml
+++ b/src/Fi/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+fi_core_Storicomodifiche:
+    resource: "@FiCoreBundle/Resources/config/routing/storicomodifiche.yml"
+    prefix:   /Storicomodifiche
+
 FiCoreBundle_Ffprincipale:
     resource: "@FiCoreBundle/Resources/config/routing/ffprincipale.yml"
     prefix:   /Ffprincipale
@@ -58,3 +62,7 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
+
+FiCoreBundle_Storicomodifiche: 
+  resource: "@FiCoreBundle/Resources/config/routing/storicomodifiche.yml"
+  prefix: /Storicomodifiche
