--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -55,4 +55,10 @@ services:
         factory_method:  'getRepository'
         arguments:  
             - 'Fi\CoreBundle\Entity\Storicomodifiche'
-        
+
+    Tabelle_repository: 
+        class: Fi\CoreBundle\Entity\TabelleRepository
+        factory_service: 'doctrine.orm.default_entity_manager'
+        factory_method:  'getRepository'
+        arguments:  
+            - 'Fi\CoreBundle\Entity\Tabelle'        
