--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -51,13 +51,13 @@ services:
 
     OpzioniTabella_repository: 
         class: Fi\CoreBundle\Entity\OpzioniTabellaRepository
-        factory: [@doctrine.orm.entity_manager, getRepository]
+        factory: ["@doctrine.orm.entity_manager", getRepository]
         arguments:  
             - 'Fi\CoreBundle\Entity\OpzioniTabella'   
 
     Storicomodifiche_repository: 
         class: Fi\CoreBundle\Entity\StoricomodificheRepository
-        factory: [@doctrine.orm.entity_manager, getRepository]
+        factory: ["@doctrine.orm.entity_manager", getRepository]
         arguments:  
             - 'Fi\CoreBundle\Entity\Storicomodifiche'
 
