--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -61,4 +61,9 @@ services:
         arguments:  
             - 'Fi\CoreBundle\Entity\Storicomodifiche'
 
+    fi_core.type.entity_hidden:
+        class: Fi\CoreBundle\Form\Type\EntityHiddenType
+        arguments: ["@doctrine.orm.entity_manager"]
+        tags:
+        - { name: form.type, alias: entity_hidden }
      
