--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -19,7 +19,7 @@ services:
 
     fi.twig.fi_versione_extension:
         class: Fi\CoreBundle\Twig\Extension\VersioneExtension
-        arguments: [@service_container]
+        arguments: ['@service_container']
         tags:
           - { name: twig.extension }
 
