--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,11 +11,11 @@
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
-    bootstrap                   = "src/Fi/CoreBundle/Tests/bootstrap.php" >
+    bootstrap                   = "tests/bootstrap.php" >
 
     <testsuites>
         <testsuite name="Fifiree2 test suite">
-            <directory suffix=".php">src/Fi/CoreBundle/Tests</directory>
+            <directory suffix=".php">tests</directory>
         </testsuite>
     </testsuites>
     <php>
