--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ language: php
 php:
   - 5.6
   - 7.0
+  - hhvm
 
+dist: trusty
+
+addons:
+  firefox: "latest-esr"
+  
 before_script:
   - phpenv config-add travis.php.ini
   - "export DISPLAY=:99.0"
