--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
 before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then phpenv config-add travis.php.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then phpenv config-add travis.php.ini; fi
+  - echo "hhvm.libxml.ext_entity_whitelist = file,http,https" >> /etc/hhvm/php.ini
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
