--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ php:
 
 #sudo: required
 #dist: trusty
-
+cache:
+  directories:
+    - $HOME/.composer/cache
+    
 addons:
   firefox: "latest-esr"
   
